<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Domestio</string>
    <!-- Strings used for fragments for navigation -->

    <string name="made_by">Made by</string>
    <string name="author">Michal Dzurík</string>
    <string name="sign_up_by_email">Sign up by Email</string>
    <string name="name_and_surename">Name and Surename</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="password_repeat">Password repeat</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="back">Back</string>
    <string name="authentication_failed">Authentication failed.</string>

    <string name="you_have_been_registered_successfully">You have been registered successfully</string>
    <string name="you_have_been_logged_in_successfully">You have been logged in successfully</string>
    <string name="your_rooms">Your rooms</string>
    <string name="done">Done</string>
    <string name="welcome">Welcome</string>
    <string name="menu">Menu</string>
    <string name="create_task">Create task</string>
    <string name="create_room">Create Room</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="sign_out">Sign out</string>
    <string name="do_you_really_want_to_sign_out">Do you really want to sign out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="change_name">Change name</string>
    <string name="change">Change</string>
    <string name="name_was_changed_successfully">Name was changed successfully</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="change_email">Change email</string>
    <string name="email_is_not_valid">Email is not valid</string>
    <string name="email_was_changed_successfully">Email was changed successfully</string>
    <string name="ok">OK</string>
    <string name="need_to_authenticate">We need to authenticate you before changing your information</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="passwords_dont_match">Passwords don\'t match</string>
    <string name="password_was_changed_successfully">Password was changed successfully</string>
    <string name="password_at_least_6_char_long">Password must be at last 6 characters long</string>
    <string name="room_heading">Room heading</string>
    <string name="room_description">Room description</string>
    <string name="choose_a_color">Choose a color</string>
    <string name="choose">Choose</string>
    <string name="room">Room:</string>
    <string name="word_for" tools:ignore="ExtraTranslation">For:</string>
    <string name="task_heading">Task Heading</string>
    <string name="task_description">Task description</string>
    <string name="buy_me_a_coffee">Buy me a coffee</string>
    <string name="about_me">About me</string>
    <string name="tasks">Tasks</string>
    <string name="rooms">Rooms</string>
    <string name="notifications">Notifications</string>
    <string name="change_room_description">Change room description</string>
    <string name="change_room_heading">Change room heading</string>
    <string name="you_are_not_in_any_room">You are not in any room</string>
    <string name="you_have_no_tasks">You have no tasks</string>
    <string name="add_member">Add member</string>
    <string name="member_s_email">Member\'s email</string>
    <string name="user_doesnt_exists">User doesn\'t exists</string>
    <string name="user_is_now_member_of_this_room">User is now member of this room</string>
    <string name="room_color">Room color</string>
    <string name="show">Show</string>
    <string name="members_list">Members list</string>
    <string name="remove_room">Remove room</string>
    <string name="do_you_really_wnat_t_leave">Do you really want to leave?</string>
    <string name="leave_room">Leave room</string>
    <string name="members">Members</string>
    <string name="remove">Remove</string>
    <string name="do_you_want_to_remove_member">Do you really want to remove this member from this room?</string>
    <string name="admin">Admin</string>
    <string name="missing_informations">Missing information\'s</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="characters">characters</string>
    <string name="your_tasks">Your tasks</string>
    <string name="name_is_not_valid">Name is not valid</string>
    <string name="no_color_selected">No color selected</string>
    <string name="color_wasn_selected">Color wasn\'t selected</string>
    <string name="select_room">Select room</string>
    <string name="no_rooms">No rooms</string>
    <string name="no_users">No users</string>
    <string name="you_didnt_set_the_time">You didn\'t set the time</string>
    <string name="user_not_selected">User is not selected</string>
    <string name="room_not_selected">Room is not selected</string>
    <string name="new_room">New room here!</string>
    <string name="your_are_member_of_room">You are now member of room</string>
    <string name="go_check_it_out">Go check it out</string>
    <string name="something_new_in_room">There is something new in here!</string>
    <string name="assigned_you_a_new_task">assigned you a new task</string>
    <string name="task_modified">Task modified</string>
    <string name="you_have_new_task">You have new task </string>
    <string name="something_new_in_task">Something new in your</string>
    <string name="remove_task">Remove task</string>
    <string name="do_you_want_to_remove_task">Do you really want to remove this task?</string>
    <string name="tasks_you_created">Tasks you created</string>
    <string name="delete">Delete</string>
    <string name="options">Options</string>
    <string name="we_are_offline">We are offline</string>
    <string name="no_internet_description">We are currently unable to perform this operation, because we are offline. Turn on your wifi and connect to the network</string>
    <string name="password_reset_fail">We were unable to send you an email</string>
    <string name="i_forgot_my_password"><u>I forgot my password</u></string>
    <string name="enter_your_email">Enter your email</string>
    <string name="warning">Warning</string>
    <string name="spam_warrning">If you can\'t find reset email in your mailbox, please check your spam.</string>
    <string name="you_are_offline">You are offline</string>
    <string name="cant_do_while_offline">You can\'t do that while you\'re offline</string>
    <string name="verify">Verify</string>
    <string name="undone">Undone</string>
    <string name="task_undone_by_receiver">Task is yet undone by receiver</string>
    <string name="task_verified">Task verified</string>
    <string name="user">User</string>
    <string name="has_verified_task">has verified the task</string>
    <string name="has_removed_verification_from_task">has removed verification from task</string>
    <string name="set_task_as_verified">Set task as verified</string>
    <string name="sure_want_to_set_verified">Are you sure you want to set this task as verified? Task will be deleted after this action.</string>
    <string name="your_name">Your name</string>
    <string name="enter_name">Enter name you want to use. You can change it later on.</string>
    <string name="dismiss">Dismiss</string>
    <string name="noone_in_room">There is no one in this room</string>
    <string name="nothing_here">Nothing here</string>
    <string name="app_permission">App permission</string>
    <string name="app_permission_descirption">We need to enable background activity for app to work properly.Please enable it.</string>
    <string name="enable">Enable</string>
    <string name="new_room_for_you">You are now member of new room. Go check it out!</string>
    <string name="task_removed">Task removed</string>
    <string name="has_removed_you_task">has removed you task</string>
    <string name="has_left_room">has left room</string>
    <string name="removed_you_from_room">had removed you from room</string>
    <string name="user_left_the_room">User left the room</string>
    <string name="room_unavailable">Room unavailable</string>
    <string name="task_done">Task done</string>
    <string name="has_done_task">has done task</string>


    <string-array name="taskSpinner">
        <item>All tasks</item>
        <item>My tasks</item>
    </string-array>
</resources>