<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="?BackgroundColor"
    app:cardElevation="0dp"
    app:cardCornerRadius="@dimen/alert_radius"
    app:contentPadding="@dimen/alert_padding" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_new_password"
            android:textSize="20sp"
            android:textColor="?PrimaryTextColor"
            android:fontFamily="@font/poppins_medium"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/password"
            android:textColor="?ComponentIconTint"
            android:fontFamily="@font/poppins_medium" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_input_background_rounded"
            android:hint="********"
            android:textColorHint="?SecondaryTextColor"
            android:textSize="12sp"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:textColor="?ComponentIconTint"
            android:fontFamily="@font/poppins_medium"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/repeat_password"
            android:textColor="?ComponentIconTint"
            android:fontFamily="@font/poppins_medium"
            android:layout_marginTop="10dp"/>

        <EditText
            android:id="@+id/passwordRepeatInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/alert_input_background_rounded"
            android:hint="********"
            android:textColorHint="?SecondaryTextColor"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:inputType="textPassword"
            android:textColor="?ComponentIconTint"
            android:fontFamily="@font/poppins_medium"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right"
            android:layout_marginTop="20dp">

            <android.widget.Button
                android:background="@drawable/done_button_background"
                android:textAllCaps="false"
                android:textColor="?MainColor"
                android:id="@+id/negativeButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/back"
                android:textSize="@dimen/alert_button_text_size"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginRight="10dp"/>

            <android.widget.Button
                android:background="@drawable/alert_positive_button_background"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:id="@+id/positiveButton"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/change"
                android:textSize="@dimen/alert_button_text_size"/>

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>