<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity">

    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/auth_body_margin"
        android:layout_marginBottom="100dp"
        android:maxWidth="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="90dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/logo" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="60dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Log"
                android:textColor="?attr/PrimaryTextColor"
                android:textSize="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="in"
                android:textColor="?attr/MainColor"
                android:textSize="20dp" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_bottom_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textColor="?attr/PrimaryTextColor" />

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_top_margin"
                android:background="@drawable/input_background_rounded"
                android:fontFamily="@font/inter_semibold"
                android:hint="example@gmail.com"
                android:inputType="textEmailAddress"
                android:textColorHint="?attr/SecondaryTextColor"
                android:textColor="?attr/PrimaryTextColor"
                android:textSize="@dimen/input_text_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/input_bottom_margin"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="?attr/PrimaryTextColor" />

            <EditText
                android:id="@+id/passwordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/input_top_margin"
                android:background="@drawable/input_background_rounded"
                android:fontFamily="@font/inter_semibold"
                android:hint="**********"
                android:inputType="textPassword"
                android:textColorHint="?attr/SecondaryTextColor"
                android:textColor="?attr/PrimaryTextColor"
                android:textSize="@dimen/input_text_size" />

            <TextView
                android:id="@+id/forgotPasswordButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:textSize="12sp"

                android:layout_marginTop="20dp"
                android:text="@string/i_forgot_my_password"/>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="@dimen/auth_body_margin"
        android:layout_marginBottom="25dp"
        >

        <android.widget.Button
            android:id="@+id/loginButton"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:background="@drawable/main_button_background"/>

        <android.widget.Button
            android:id="@+id/backButton"
            android:text="@string/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textAlignment="center"
            android:background="@color/transparent"
            android:textColor="?attr/MainColor"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>