<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SettingsActivity"
    android:orientation="vertical">

    <!-- TOP BAR -->
    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/home_body_margin"
        android:layout_marginTop="@dimen/home_body_margin"
        android:gravity="center_vertical"
        android:layout_marginBottom="@dimen/home_body_margin"
        >

        <android.widget.ImageButton
            android:id="@+id/backButton"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="left"
            android:background="@drawable/controll_button_background"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/title"
            android:textAlignment="center"

            android:text="@string/settings"
            android:textSize="19sp"
            android:textColor="?ComponentIconTint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">



        <LinearLayout
            android:layout_marginBottom="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/home_body_margin"
            android:gravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notifications"
                    android:textColor="?PrimaryTextColor"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/notificationHint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="System"
                    android:textSize="15sp" />


            </LinearLayout>

            <android.widget.Button
                android:id="@+id/notificationEditButton"
                android:gravity="center"
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:text="@string/edit"
                android:background="@drawable/edit_button_background"
                android:textColor="?MainColor"
                android:textAllCaps="false"/>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>